<resources>
    <string name="app_name">Havamana</string>
    <string name="hs_info">Search the city to get weather information</string>
    <string name="hs_search_placeholder">City name</string>
    <string name="hs_search_enter_valid">Please enter valid city</string>
    <string name="hs_loading_weather">Loading weather..</string>
    <string name="please_await">Please wait</string>
    <string name="ok">Ok</string>
    <string name="not_found_city">Not found! Please search a nearest mainstream city.</string>
    <string name="exceeded_limit">You have exceeded the limit. Please try after sometime</string>
    <string name="back">Back</string>
    <string name="city">City</string>
    <string name="temparature">Temparature</string>
    <string name="weather">Weather</string>
    <string name="wind">Wind</string>
</resources>
